[package]
description = "Enabling smart(er) contracts with the power of Polkadot"
edition = "2021"
license = "GPL-3.0-only"
name = "pop-api"
version = "0.0.0"

[dependencies]
bitflags = { version = "1.3.2" }
enumflags2 = "0.7.9"

# Pop.
pop-primitives = { path = "../primitives", default-features = false }

# Substrate.
sp-io = { version = "38.0.0", default-features = false, features = [
	"disable_allocator",
	"disable_oom",
	"disable_panic_handler",
] }

# ink! dependencies.
ink = { version = "5.1.0", default-features = false }

[dev-dependencies]
pallet-nfts = { path = "../pallets/nfts" }
scale = { package = "parity-scale-codec", version = "3" }

[lib]
crate-type = [ "rlib" ]
name = "pop_api"
path = "src/lib.rs"

[features]
default = [ "std" ]
fungibles = [  ]
nonfungibles = [  ]
std = [
	"ink/std",
	"pop-primitives/std",
	"sp-io/std",
]
messaging = [ "default" ] 
