[package]
description = "Sandboxing environment for contract quasi testing with Pop Network runtimes."
edition = "2021"
license = "GPL-3.0-only"
name = "pop-sandbox"
version = "0.0.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.11", default-features = false }

# Local
drink = { path = "../../pop-drink/drink", default-features = false }
pallet-api = { path = "../pallets/api", default-features = false }
pop-chain-extension = { path = "../extension", default-features = false }
pop-primitives = { path = "../primitives", default-features = false }

# Substrate
cumulus-primitives-core = { version = "0.14.0", default-features = false }
frame-support = { version = "36.0.0", default-features = false }
frame-system = { version = "36.1.0", default-features = false }
pallet-assets = { version = "37.0.0", default-features = false }
pallet-balances = { version = "37.0.0", default-features = false }
pallet-contracts = { version = "35.0.0", default-features = false }
pallet-timestamp = { version = "35.0.0", default-features = false }
sp-core = { version = "34.0.0", default-features = false }
sp-runtime = { version = "38.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }

[lib]
crate-type = [ "rlib" ]
name = "pop_sandbox"
path = "src/lib.rs"

[features]
default = [ "std" ]
std = [
	"codec/std",
	"cumulus-primitives-core/std",
	"drink/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-api/std",
	"pallet-api/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-contracts/std",
	"pallet-timestamp/std",
	"pop-chain-extension/std",
	"pop-primitives/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
