[package]
authors = [ "[your_name] <[your_email]>" ]
description = "Sandboxing environment for contract quasi testing with Pop Network runtimes."
edition = "2021"
license = "GPL-3.0-only"
name = "pop-sandbox"
version = "0.0.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.21", default-features = false }
scale-info = { version = "2.11", default-features = false }

drink = { path = "../../pop-drink/drink", default-features = true }

# Substrate 
frame-metadata = { version = "16.0.0", default-features = false }
frame-support = { version = "36.0.0", default-features = false }
frame-support-procedural = { version = "=30.0.1", default-features = false }
frame-system = { version = "36.1.0", default-features = false }
pallet-assets = { version = "37.0.0", default-features = false }
pallet-balances = { version = "37.0.0", default-features = false }
pallet-contracts = { version = "35.0.0", default-features = false }
pallet-timestamp = { version = "35.0.0", default-features = false }
pop-runtime-devnet = { path = "../runtime/devnet", default-features = false }
sp-io = { version = "37.0.0", default-features = false }
sp-runtime = { version = "=38.0.0", default-features = false }

[lib]
crate-type = [ "rlib" ]
name = "pop_sandbox"
path = "src/lib.rs"

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-contracts/std",
	"pallet-timestamp/std",
	"pop-runtime-devnet/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
]
