[package]
edition = "2021"
license = "GPL-3.0-only"
name = "pop-primitives"
version = "0.0.0"

[dependencies]
bounded-collections = { version = "0.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [ "derive" ] }
scale-info = { version = "2.6", default-features = false, features = [ "derive" ], optional = true }

[features]
default = [ "std" ]
std = [ "bounded-collections/std", "scale-info/std", "scale/std" ]
