[package]
authors = [ "R0GUE <go@r0gue.io>" ]
description = "Simple contract for proxying a call to a chain extension."
edition = "2021"
name = "proxy"
version = "0.1.0"

[dependencies]
ink = { git = "https://github.com/r0gue-io/ink", branch = "sub0", default-features = false }
polkavm-derive = "0.11.0"

[lib]
path = "lib.rs"

[features]
default = [ "std" ]
std = [ "ink/std" ]
