[package]
authors = [ "R0GUE <go@r0gue.io>" ]
description = "Simple contract for proxying a call to a chain extension."
edition = "2021"
name = "proxy"
version = "0.1.0"

[dependencies]
ink = { version = "5.1.0", default-features = false }

[lib]
path = "lib.rs"

[features]
default = [ "std" ]
std = [ "ink/std" ]
