[package]
name = "pallet-ismp"
version = "0.1.0"
edition = "2021"
authors = ["Polytope Labs <hello@polytope.technology>"]

[dependencies]
# substrate
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false, optional = true }

 # polytope labs
ismp = { package = "ismp", path = "../core", default-features = false }

# crates.io
codec = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
mmr-lib = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"], optional = true }
derive_more = { workspace = true, default-features = false, features = ["from", "into", "display"] }
enum-as-inner = { workspace = true }


[dev-dependencies]
env_logger = "0.10.0"
pallet-timestamp = { workspace = true }
#ismp-testsuite = { path = "../testsuite" }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
    "scale-info/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "ismp/std",
    "mmr-lib/std",
    "sp-api/std",
    "serde",
]

testing = ["pallet-timestamp/std"]

runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "frame-support/runtime-benchmarks"
]
