[package]
name = "ismp-parachain"
version = "0.1.0"
edition = "2021"
authors = ["Polytope Labs <hello@polytope.technology>"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# crates.io
serde = { workspace = true, features = ["derive"], optional = true }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
hex-literal = { workspace = true }
primitive-types = { workspace = true, default-features = false }

# polytope labs
ismp = { path = "../core", default-features = false }
pallet-ismp = { path = "../pallet", default-features = false }

# substrate
frame-support = { default-features = false, workspace = true }
frame-system = { default-features = false, workspace = true }
sp-trie = { default-features = false, workspace = true }
sp-inherents = { default-features = false, workspace = true }
sp-io = { default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }
sp-consensus-aura = { default-features = false, workspace = true }

# cumulus
cumulus-pallet-parachain-system = { workspace = true, default-features = false }
cumulus-primitives-core = { workspace = true, default-features = false }

# local
substrate-state-machine = { path = "../state-machine", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "scale-info/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-primitives-core/std",
    "ismp/std",
    "sp-trie/std",
    "sp-consensus-aura/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-inherents/std",
    "primitive-types/std",
    "pallet-ismp/std",
    "serde",
    "substrate-state-machine/std"
]
