[package]
authors.workspace = true
description = "API pallet, enabling smart(er) contracts with the power of Polkadot"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pallet-api-vnext"
repository.workspace = true
version = "0.1.0"

[lib]
doctest = false

[dependencies]
base64.workspace = true
codec.workspace = true
frame-benchmarking.workspace = true
frame-support.workspace = true
frame-system.workspace = true
pallet-assets = { workspace = true, default-features = false, optional = true }
pallet-balances = { workspace = true, default-features = false, optional = true }
pallet-revive = { workspace = true, default-features = false }
scale-info.workspace = true

[dev-dependencies]
pallet-balances.workspace = true
pallet-timestamp.workspace = true
sp-io.workspace = true

[features]
default = [ "fungibles", "std" ]
fungibles = [ "dep:pallet-assets", "dep:pallet-balances" ]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-revive/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-assets?/std",
	"pallet-balances/std",
	"pallet-revive/std",
	"pallet-timestamp/std",
	"scale-info/std",
	"sp-io/std",
]
