[package]
authors.workspace = true
description = "API pallet, enabling smart(er) contracts with the power of Polkadot"
edition.workspace = true
license.workspace = true
name = "pallet-api"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec.workspace = true
log.workspace = true
scale-info.workspace = true

# Local
pop-chain-extension.workspace = true

# Substrate
frame-benchmarking.workspace = true
frame-support.workspace = true
frame-system.workspace = true
pallet-assets.workspace = true
pallet-nfts.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true
sp-core.workspace = true
anyhow.workspace = true

# Cross chain
ismp.workspace = true
pallet-ismp.workspace = true
xcm.workspace = true

[dev-dependencies]
pallet-balances.workspace = true
sp-core.workspace = true
sp-io.workspace = true

[features]
default = [ "std" ]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-nfts/runtime-benchmarks",
	"pop-chain-extension/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"ismp/std",
	"log/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-ismp/std",
	"pallet-nfts/std",
	"pop-chain-extension/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-nfts/try-runtime",
	"sp-runtime/try-runtime",
]
