[package]
name = "pallet-asset-manager"
authors = { workspace = true }
edition = "2021"
version = "0.1.0"

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Polkadot
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }

# Benchmarks
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["insecure_zero_ed", "std"] }
sp-core = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "codec/std",
    "scale-info/std",
    "serde",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "xcm/std",
    "xcm-builder/std",
    "xcm-executor/std",
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
