[package]
authors = { workspace = true }
edition = "2021"
name = "pallet-asset-manager"
version = "0.1.0"

[dependencies]
log = { workspace = true }
serde = { workspace = true, optional = true }

# Substrate
codec = { workspace = true, features = [ "derive" ] }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true, features = [ "derive" ] }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Polkadot
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }

# Benchmarks
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = [ "insecure_zero_ed", "std" ] }
sp-core = { workspace = true, features = [ "std" ] }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [ "frame-benchmarking" ]
try-runtime = [ "frame-support/try-runtime" ]
