[package]
authors.workspace = true
description = "Builder incentives pallet, to incentivize builders to build on the platform"
edition.workspace = true
license.workspace = true
name = "pallet-builder-incentives"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec.workspace = true
log.workspace = true
scale-info.workspace = true

# Substrate
frame-benchmarking.workspace = true
frame-support.workspace = true
frame-system.workspace = true
pallet-revive.workspace = true
pallet-transaction-payment.workspace = true
sp-core.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
sp-io = { workspace = true, default-features = true }

[features]
default = [ "std" ]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-revive/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-revive/std",
	"pallet-transaction-payment/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-revive/try-runtime",
	"sp-runtime/try-runtime",
]
