[package]
authors = ["Polytope Labs <hello@polytope.technology>"]
edition = "2021"
name = "pallet-ismp-demo"
publish = false
version = "0.1.1"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# crates.io
# codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
#     "derive",
# ] }
codec.workspace = true
# scale-info = { version = "2.1.1", default-features = false, features = [
#     "derive",
# ] }
scale-info.workspace = true

# polytope labs
ismp = { workspace = true, default-features = false }

# substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

# local
pallet-ismp = { workspace = true, default-features = false }

[dev-dependencies]

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "ismp/std",
    "pallet-balances/std",
    "pallet-ismp/std",
    "scale-info/std",
    "sp-runtime/std",
]

try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "sp-runtime/try-runtime",
]
