[package]
authors.workspace = true
description = "NFTs pallet (polkadot v1.15.0) for Pop Network Runtimes"
edition.workspace = true
license.workspace = true
name = "pallet-nfts"
readme = "README.md"
version = "0.1.0"

[package.metadata.docs.rs]
targets = [ "x86_64-unknown-linux-gnu" ]

[dependencies]
codec.workspace = true
enumflags2.workspace = true
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
log.workspace = true
scale-info = { features = [ "derive" ], workspace = true }
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
pallet-balances.workspace = true
sp-keystore.workspace = true

[features]
default = [ "std" ]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"enumflags2/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]