[package]
name = "pallet-async"
authors = ["Anonymous"]
description = "Frame Pallet"
version = "0.1.0"
license = "Unlicense"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec.workspace = true
scale-info.workspace = true

# Substrate
frame-benchmarking.workspace = true
frame-support.workspace = true
frame-system.workspace = true
parachains-common.workspace = true
sp-runtime.workspace = true

xcm.workspace = true
pallet-xcm.workspace = true
xcm-executor.workspace = true


[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-std.workspace = true

xcm-builder.workspace = true

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "parachains-common/runtime-benchmarks",
    "xcm-executor/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
std = [
    "codec/std",
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-xcm/std",
    "parachains-common/std",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "xcm/std",
    "xcm-executor/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-xcm/try-runtime",
    "sp-runtime/try-runtime",
]